2001-12-08  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Powerup
	Added _non_ working ballspeed powerup.

	* Highscore
	Made it such that the highscore is shown, if you enter a new one.

	* Rounding
	Fixed proper rounding when blitting pixmapentities.
	
	* Scripts
	Moved the preload stuff around a bit, added a ReloadScripts()
	command, preloads the powerup_bad.wav file

2001-12-06  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Highscore
	Added a patch to the highscore from Kim Schulz

	* Powerup
	Added a powerup level - does not work

2001-12-05  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Preload
	Added a general preload thingy to the ressourcemanager class.
	Preloaded all powerup graphics, it is in powerups.py.

	* Profiling
	Fiddled with profiling stuff. Seems 47 % of the time on map1.py is
	spent in collision detection.

2001-12-01  Mads Bondo Dydensborg  <madsdyd@ripley>

	* RELEASE!
	Version 0.3.0 will be the version submitted for the SDL
	contest. It includes a bunch of minor changes, and several new
	powerups and a new map. We did not have time to include all the
	stuff we wished. To bad.
	Tagging version 0.3.0

	* Various
	Removed some print stuff from various places
	Adjusted the buffer mix size
	Added a time bonus on level complete
	Tagging version 0.2.2

2001-11-30  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Sounds
	Added a number of sounds
	Tagging version 0.2.1

	* Fixes
	A lot of minor fixes
	Updated makefiles to only install files that are used
	Tagging version 0.2.0

2001-11-27  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Powerups
	Added falling down powerups
	Added two different shots
	Lots to be done
	Added map5.py
	Added a SetMapName function, and a text effect for 
	writing the map name

2001-11-24  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Cleaning up
	Moved a lot of the graphics data around
	Added a "delayed" entity adding on TMap
	Added "testing" powerup

2001-11-23  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Various