@@ -1,3 +1,12 @@
+2001-12-08  Jonas Christian Drewsen  <jcd@diller.emdrupborg.dk>
+
+	* Collision:
+	Fixed double collision reponse error.
+	Moved all collision handling for ball to the TBall class
+	Removed currenttime paramenter in OnCollision, and 
+	the LastCollision variable is now set in game.cc
+	and not in the OnCollision function.
+	
 2001-12-08  Mads Bondo Dydensborg  <madsdyd@ripley>
 
 	* Powerup
@@ -5,6 +14,8 @@
 
 	* Highscore
 	Made it such that the highscore is shown, if you enter a new one.
+
+2001-12-08  Mads Bondo Dydensborg  <madsdyd@ripley>
 
 	* Rounding
 	Fixed proper rounding when blitting pixmapentities.
